# Fixed the github logo being too large

--- a/styles.css
+++ b/styles.css
@@ -104,7 +104,7 @@ body {
   align-items: center;
 
   aspect-ratio: 1 / 1;
-  background-color: #FCFDFD;
+  background-color: #fcfdfd;
 
   border: 0.5rem solid oklch(58.6% 0.253 17.585);
   border-radius: 10px;
@@ -118,6 +118,7 @@ body {
   font-weight: bold;
 
   color: var(--msg-normal);
+  
 }
 
 #game-ring {
@@ -217,7 +218,7 @@ body {
   justify-content: center;
   align-items: center;
 
-  gap: 1rem;
+  gap: 0.5rem;
 
   color: black;
   font-size: large;
@@ -230,6 +231,19 @@ body {
   align-self: flex-start;
 
   text-decoration: line;
+
+  height: 4%;
+}
+
+#credits-img {
+  height: 100%;
+}
+
+@media (width < 40rem) {
+  #game-container {
+    padding-right: 1rem;
+    padding-left: 1rem;
+  }
 }
 
 /* sm */
